--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <span class="mbr-iconfont mbri-delivery" style="color: rgb(127, 25, 51);"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-7">STANDARD SHIPPING<div>7-10 BUSINESS DAYS</div></h4>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong>Free Shipping on all items no minimum needed . Processing and tranist time is included in the estimate time of arrival !</strong><br><strong>FREE $0.00</strong></p>
+                    <h4 class="card-title py-3 mbr-fonts-style display-4">STANDARD SHIPPING<div>7-10 BUSINESS DAYS</div></h4>
+                    <p class="mbr-text mbr-fonts-style display-4"><br>Free Shipping on all items no minimum needed . Processing and tranist time is included in the estimate time of arrival !<br><strong>FREE $0.00</strong></p>
                 </div>
             </div>
 
@@ -45,7 +45,7 @@
                     <span class="mbr-iconfont mbri-delivery" style="color: rgb(255, 51, 102);"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-7">Expedited Shipping<div>3-5BUSINESS DAYS</div><br><div><br></div><div><strong>Need your item (s) sooner for your next event ? Try our expedited shipping . Processing time is 24-48 hours</strong></div><strong><br></strong><div><strong><br></strong></div><strong><br></strong><div><strong>$18.99</strong></div></h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-4">EXPEDITED SHIPPING&nbsp;<br><div>3-5 BUSINESS DAYS</div><br><div><br></div><div><br></div><div><strong><br></strong></div><div>Try out expedited shipping processing time is 24 -48 hours</div><br><br><div><strong><br></strong></div><br><div><strong>$16.99</strong></div></h4>
                     <p class="mbr-text mbr-fonts-style display-4"></p>
                 </div>
             </div>
@@ -55,9 +55,9 @@
                     <span class="mbr-iconfont mbri-delivery" style="color: rgb(203, 127, 255);"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-7">
+                    <h4 class="card-title py-3 mbr-fonts-style display-4">
                         OVERNIGHT<div>1-2 BUSINESS DAYS</div></h4>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong>For overnight shipping order (s) need to be placed before 10:30am (CST) Overnight order will be shipped out same day .&nbsp;<br>$39.00</strong></p>
+                    <p class="mbr-text mbr-fonts-style display-4"><br>For overnight shipping order (s) need to be placed before 10:30am (CST) Overnight order will be shipped out same day .&nbsp;<br><strong>$39.00</strong></p>
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web creator</a></section><section class="features1 cid-qGJA7kS06h" id="features1-s">
+<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="features1 cid-qGJA7kS06h" id="features1-s">
     
     
 
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Canada &amp; U.K. Shipping&nbsp;<br>Standard Shipping&nbsp;<br>7-21 days</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">We Ship worldwide ! Customs fees &amp; duty are customer responsible&nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style display-7">We Ship worldwide ! Customs fees &amp; duty are customer responsible&nbsp;<br><br><strong>$16.99</strong></p>
                 </div>
             </div>
 
@@ -136,9 +136,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">PRODUCT</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Mobirise is an easy website builder - just drop site elements to your page, add cont6ent and style it to look the way you like.
-                    </p>
+                    <p class="mbr-text mbr-fonts-style display-7">Did you know? If you love an item, you can add it to your favorites<br>by clicking the ♥ icon on the product page.</p>
                 </div>
             </div>
 
@@ -149,9 +147,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
                         SHIPPPING</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
-                    </p>
+                    <p class="mbr-text mbr-fonts-style display-7">All Standard shipping is free for USA customer !</p>
                 </div>
             </div>
 
@@ -162,9 +158,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
                         RETURNS</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
-                    </p>
+                    <p class="mbr-text mbr-fonts-style display-7">You have 30 days to recieved&nbsp;</p>
                 </div>
             </div>
 
